--- a/src/two/index.html
+++ b/src/two/index.html
@@ -4,8 +4,21 @@
     <link rel="stylesheet" href="./index.css" />
     <style>
       .hot {
-        color: black !important;
-        color: blue 
+        color: #fff;
+        margin: 5px 10px 15px 20px; 
+        height: 4000px;
+        border: 1px solid red;
+        background-color: aqua;
+      }
+
+      .content {
+        position: sticky;
+        top: 20px;
+        margin-top: 300px;
+      }
+
+      #cold {
+        margin: 5px 10px;
       }
     </style>
   </head>
@@ -14,7 +27,9 @@
     <!-- <div style="color: blue; font-size: 40px;">今天抓紧学完css</div> -->
 
     <!-- 类选择器 -->
-    <div class="hot">太热了</div>
+    <div class="hot">
+        <div class="content">hahahahahahahahaha</div>
+    </div>
 
     <!-- ID 选择器 -->
     <div id="cold">太冷了</div>
