--- a/src/two/index.html
+++ b/src/two/index.html
@@ -7,6 +7,7 @@
         color: #fff;
         margin: 5px 10px 15px 20px; 
         height: 4000px;
+        width: 300px;
         border: 1px solid red;
         background-color: aqua;
       }
