--- a/src/eleven/index.html
+++ b/src/eleven/index.html
@@ -3,24 +3,41 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <!--vue引入-->
+    <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
+    <!--react-->
     <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
-      integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
+      crossorigin
+      src="https://unpkg.com/react@18/umd/react.development.js"
+    ></script>
+    <script
+      crossorigin
+      src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
     ></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>测试</title>
   </head>
   <body>
-    <div id="id">123456</div>
-    <!-- 操作真实dom -->
+    <div id="app">{{message}}</div>
+    <div id="app1">{{msg}}</div>
+    <div id="root"></div>
     <script>
-      // console.log((document.getElementById("id").innerHTML = "654321"));
-      console.log($('#id')[0])
-      $('#id')[0].innerHTML = 'juqery'
-      $('#id')[0].innerHTML = 'pjw-jquery'
-      
+      // vue初始化
+      var app = new Vue({
+        el: "#app",
+        data: {
+          message: "hello vue1",
+        },
+      });
+      var app1 = new Vue({
+        el: "#app1",
+        data: {
+          msg: "hello vue2",
+        },
+      });
+      // react初始化
+      const root = ReactDOM.createRoot(document.getElementById("root"));
+      root.render("Hello, world!");
     </script>
   </body>
 </html>
